--- a/css/game.css
+++ b/css/game.css
@@ -5,7 +5,7 @@ body, html {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
-    min-height: 100%;
+    min-height: 100vh;
     display: flex;
     flex-direction: column; 
     background-color: gainsboro;
